# social-app-flask

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
social_flask/: __init__.py  models.py  routes.py  strategy.py  template_filters.py  utils.py
