[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=78.0.2"]

[project]
authors = [
  {email = "matiasaguirre@gmail.com", name = "Matias Aguirre"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python",
  "Topic :: Internet"
]
dependencies = [
  "flask-login",
  "six",
  "social-auth-core >= 1.0.0"
]
description = "Python Social Authentication, Flask integration."
dynamic = ["version"]
keywords = [
  "auth",
  "flask",
  "social"
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
name = "social-auth-app-flask"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/python-social-auth/social-app-flask"

[tool.setuptools]
include-package-data = false
packages = [
  "social_flask"
]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "social_flask.__version__"}

[tool.tomlsort]
ignore_case = true
sort_inline_arrays = true
sort_inline_tables = true
sort_table_keys = true
spaces_before_inline_comment = 2
